# sqlbench-h

./: README.md
queries/sf=1/: q1.sql
queries/sf=10/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
queries/sf=100/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
queries/sf=1000/: q1.sql  q10.sql  q11.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
runners/datafusion/: Cargo.toml  README.md
runners/datafusion/src/: main.rs
runners/spark/: README.md  pom.xml
runners/spark/src/main/scala/io/sqlbenchmarks/sqlbenchh/: Main.scala  Qpml.scala
