[package]
name = "datafusion-sqlbench-h"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
publish = false

[dependencies]
#datafusion = "15.0"
datafusion = { git = "https://github.com/apache/arrow-datafusion" }
qpml = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
structopt = "0.3.26"
tokio = { version = "^1.0", features = ["rt-multi-thread"] }

[features]
default = []
qpml = ["dep:qpml"]